Extract Setup and Teardown code into its own class

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-SeleniumBasics" class="navigator-link ">
-                    <span>D:\EclipseProjects\Introduction\SeleniumBasics\testng.xml</span>
+                    <span>D:\EclipseProjects\Introduction\SeleniumBasics\locators-testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-SeleniumBasics">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingXpathTest" class="method navigator-link" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingCSSTest" class="method navigator-link" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -113,7 +113,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingCSSTest" class="method navigator-link" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingXpathTest" class="method navigator-link" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -143,7 +143,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingCSSTest" class="method navigator-link" hash-for-method="successfulLoginAndLogoutTest">successfulLoginAndLogoutTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingXpathPCSTest" class="method navigator-link" hash-for-method="successfulLoginAndLogoutTest">successfulLoginAndLogoutTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -153,7 +153,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingXpathPCSTest" class="method navigator-link" hash-for-method="successfulLoginAndLogoutTest">successfulLoginAndLogoutTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.LocatorsUsingCSSTest" class="method navigator-link" hash-for-method="successfulLoginAndLogoutTest">successfulLoginAndLogoutTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -292,7 +292,7 @@
         </div> <!-- panel SeleniumBasics -->
         <div panel-name="test-xml-SeleniumBasics" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\EclipseProjects\Introduction\SeleniumBasics\testng.xml</span>
+            <span class="header-content">D:\EclipseProjects\Introduction\SeleniumBasics\locators-testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -348,51 +348,51 @@ data.addRows(12);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'successfulLoginAndLogoutTest')
 data.setCell(0, 2, 'tests.LocatorsUsingXpathPCSTest')
-data.setCell(0, 3, 1370);
+data.setCell(0, 3, 1376);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'successfulLoginAndLogoutTest')
 data.setCell(1, 2, 'tests.LocatorsUsingCSSTest')
-data.setCell(1, 3, 1347);
+data.setCell(1, 3, 1351);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'successfulLoginAndLogoutTest')
 data.setCell(2, 2, 'tests.LocatorsUsingXpathTest')
-data.setCell(2, 3, 1346);
+data.setCell(2, 3, 1317);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'LoginTest')
-data.setCell(3, 2, 'tests.LocatorsUsingXpathPCSTest')
-data.setCell(3, 3, 1194);
+data.setCell(3, 2, 'tests.LocatorsTest')
+data.setCell(3, 3, 1202);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'LoginTest')
-data.setCell(4, 2, 'tests.LocatorsTest')
-data.setCell(4, 3, 1188);
+data.setCell(4, 2, 'tests.LocatorsUsingCSSTest')
+data.setCell(4, 3, 1199);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'LoginTest')
-data.setCell(5, 2, 'tests.LocatorsUsingCSSTest')
-data.setCell(5, 3, 1185);
+data.setCell(5, 2, 'tests.LocatorsUsingXpathPCSTest')
+data.setCell(5, 3, 1199);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'LoginTest')
 data.setCell(6, 2, 'tests.LocatorsUsingXpathTest')
-data.setCell(6, 3, 1172);
+data.setCell(6, 3, 1188);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'forgotPasswordTest')
 data.setCell(7, 2, 'tests.LocatorsTest')
-data.setCell(7, 3, 943);
+data.setCell(7, 3, 956);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'forgotPasswordTest')
 data.setCell(8, 2, 'tests.LocatorsUsingXpathPCSTest')
-data.setCell(8, 3, 858);
+data.setCell(8, 3, 851);
 data.setCell(9, 0, 9)
 data.setCell(9, 1, 'forgotPasswordTest')
-data.setCell(9, 2, 'tests.LocatorsUsingXpathTest')
-data.setCell(9, 3, 856);
+data.setCell(9, 2, 'tests.LocatorsUsingCSSTest')
+data.setCell(9, 3, 846);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'forgotPasswordTest')
-data.setCell(10, 2, 'tests.LocatorsUsingCSSTest')
-data.setCell(10, 3, 855);
+data.setCell(10, 2, 'tests.LocatorsUsingXpathTest')
+data.setCell(10, 3, 838);
 data.setCell(11, 0, 11)
 data.setCell(11, 1, 'successfulLoginTest')
 data.setCell(11, 2, 'tests.LocatorsTest')
-data.setCell(11, 3, 187);
+data.setCell(11, 3, 192);
 window.suiteTableData['SeleniumBasics']= { tableData: data, tableDiv: 'times-div-SeleniumBasics'}
 return data;
 }
@@ -430,152 +430,152 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginTest</span>
-                <span class="method-start">1818 ms</span>
+                <span class="method-start">1448 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">3008 ms</span>
+                <span class="method-start">2651 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">3126 ms</span>
+                <span class="method-start">2757 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">forgotPasswordTest</span>
-                <span class="method-start">4313 ms</span>
+                <span class="method-start">3801 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5257 ms</span>
+                <span class="method-start">4758 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">5376 ms</span>
+                <span class="method-start">4851 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">successfulLoginTest</span>
-                <span class="method-start">6580 ms</span>
+                <span class="method-start">5897 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">6768 ms</span>
+                <span class="method-start">6089 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.LocatorsUsingCSSTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">6888 ms</span>
+                <span class="method-start">6204 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginTest</span>
-                <span class="method-start">8109 ms</span>
+                <span class="method-start">7281 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9295 ms</span>
+                <span class="method-start">8481 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">9398 ms</span>
+                <span class="method-start">8571 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">forgotPasswordTest</span>
-                <span class="method-start">10626 ms</span>
+                <span class="method-start">9720 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11482 ms</span>
+                <span class="method-start">10566 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">11573 ms</span>
+                <span class="method-start">10662 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">successfulLoginAndLogoutTest</span>
-                <span class="method-start">12773 ms</span>
+                <span class="method-start">11728 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">14120 ms</span>
+                <span class="method-start">13080 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.LocatorsUsingXpathPCSTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">14227 ms</span>
+                <span class="method-start">13189 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginTest</span>
-                <span class="method-start">15425 ms</span>
+                <span class="method-start">14232 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">16619 ms</span>
+                <span class="method-start">15432 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">16709 ms</span>
+                <span class="method-start">15521 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">forgotPasswordTest</span>
-                <span class="method-start">17886 ms</span>
+                <span class="method-start">16567 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18744 ms</span>
+                <span class="method-start">17418 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">18850 ms</span>
+                <span class="method-start">17518 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">successfulLoginAndLogoutTest</span>
-                <span class="method-start">20039 ms</span>
+                <span class="method-start">18561 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">21410 ms</span>
+                <span class="method-start">19938 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.LocatorsUsingXpathTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">21527 ms</span>
+                <span class="method-start">20056 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginTest</span>
-                <span class="method-start">22804 ms</span>
+                <span class="method-start">21127 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">23977 ms</span>
+                <span class="method-start">22316 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">24067 ms</span>
+                <span class="method-start">22408 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">forgotPasswordTest</span>
-                <span class="method-start">25334 ms</span>
+                <span class="method-start">23519 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26191 ms</span>
+                <span class="method-start">24358 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">26285 ms</span>
+                <span class="method-start">24467 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">successfulLoginAndLogoutTest</span>
-                <span class="method-start">27473 ms</span>
+                <span class="method-start">25617 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28820 ms</span>
+                <span class="method-start">26935 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
