--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">SeleniumBasics</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,532</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,040</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SeleniumBasics</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.AutoSuggestiveDDTest</td><td><a href="#m0">validateCorrectDropDownSelected</a></td><td rowspan="1">1749400746520</td><td rowspan="1">733</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SeleniumBasics</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.AutoSuggestiveDDTest</td><td><a href="#m0">validateCorrectDropDownSelected</a></td><td rowspan="1">1749567682223</td><td rowspan="1">808</td></tr><tr class="passedodd"><td rowspan="1">tests.DropdownDynamicTest</td><td><a href="#m1">validateDynamicDropdown</a></td><td rowspan="1">1749567685813</td><td rowspan="1">844</td></tr><tr class="passedeven"><td rowspan="1">tests.DropdownLocatorsTest</td><td><a href="#m2">validateAdultCountIncreased</a></td><td rowspan="1">1749567689195</td><td rowspan="1">896</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">tests.AutoSuggestiveDDTest#validateCorrectDropDownSelected</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.DropdownDynamicTest#validateDynamicDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.DropdownLocatorsTest#validateAdultCountIncreased</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
