--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-SeleniumBasics" class="navigator-link ">
-                    <span>D:\EclipseProjects\Introduction\SeleniumBasics\dropdowns-testng.xml</span>
+                    <span>C:\Users\KUNDANATAKAMVAMSIKRI\git\SeleniumBasics\dropdowns-testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-SeleniumBasics">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.DropdownLocatorsTest" class="method navigator-link" hash-for-method="validateAdultCountIncreased">validateAdultCountIncreased</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-SeleniumBasics" title="tests.AutoSuggestiveDDTest" class="method navigator-link" hash-for-method="validateCorrectDropDownSelected">validateCorrectDropDownSelected</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SeleniumBasics" title="tests.DropdownDynamicTest" class="method navigator-link" hash-for-method="validateDynamicDropdown">validateDynamicDropdown</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-SeleniumBasics -->
@@ -133,10 +143,40 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-SeleniumBasics-class-passed -->
+          <div class="suite-SeleniumBasics-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.DropdownLocatorsTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateAdultCountIncreased">
+                  </a> <!-- validateAdultCountIncreased -->
+                  <span class="method-name">validateAdultCountIncreased</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-SeleniumBasics-class-passed -->
+          <div class="suite-SeleniumBasics-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.DropdownDynamicTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateDynamicDropdown">
+                  </a> <!-- validateDynamicDropdown -->
+                  <span class="method-name">validateDynamicDropdown</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-SeleniumBasics-class-passed -->
         </div> <!-- panel SeleniumBasics -->
         <div panel-name="test-xml-SeleniumBasics" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\EclipseProjects\Introduction\SeleniumBasics\dropdowns-testng.xml</span>
+            <span class="header-content">C:\Users\KUNDANATAKAMVAMSIKRI\git\SeleniumBasics\dropdowns-testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,6 +187,8 @@
     &lt;parameter name=&quot;baseURL&quot; value=&quot;https://rahulshettyacademy.com/dropdownsPractise/&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;tests.AutoSuggestiveDDTest&quot;/&gt;
+      &lt;class name=&quot;tests.DropdownDynamicTest&quot;/&gt;
+      &lt;class name=&quot;tests.DropdownLocatorsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- SeleniumBasics --&gt;
@@ -160,7 +202,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,16 +228,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateCorrectDropDownSelected')
-data.setCell(0, 2, 'tests.AutoSuggestiveDDTest')
-data.setCell(0, 3, 733);
+data.setCell(0, 1, 'validateAdultCountIncreased')
+data.setCell(0, 2, 'tests.DropdownLocatorsTest')
+data.setCell(0, 3, 896);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'validateDynamicDropdown')
+data.setCell(1, 2, 'tests.DropdownDynamicTest')
+data.setCell(1, 3, 844);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'validateCorrectDropDownSelected')
+data.setCell(2, 2, 'tests.AutoSuggestiveDDTest')
+data.setCell(2, 3, 808);
 window.suiteTableData['SeleniumBasics']= { tableData: data, tableDiv: 'times-div-SeleniumBasics'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 733 ms</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-SeleniumBasics">
               </div> <!-- times-div-SeleniumBasics -->
             </div> <!-- times-div -->
@@ -228,11 +278,41 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateCorrectDropDownSelected</span>
-                <span class="method-start">1650 ms</span>
+                <span class="method-start">2971 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">2384 ms</span>
+                <span class="method-start">3782 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">tests.DropdownDynamicTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(https://rahulshettyacademy.com/dropdownsPractise/)</span>
+                <span class="method-start">3978 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">validateDynamicDropdown</span>
+                <span class="method-start">6561 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">7406 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">tests.DropdownLocatorsTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(https://rahulshettyacademy.com/dropdownsPractise/)</span>
+                <span class="method-start">7573 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">validateAdultCountIncreased</span>
+                <span class="method-start">9943 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">10840 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
